# sqlite-past-present-future

./: .gitignore  CMakeLists.txt  README.md  tatp_sqlite3.cpp
analysis/: analysis.py  blob.py  profile.py  profiles.py  ssb.py  tatp.py  util.py
analysis/data/: footprints.txt  ssb.csv  tatp.csv
analysis/data/blob/: c220g5.csv  duckdb.csv  rpi.csv
analysis/data/blob/c220g5/: sqlite3.csv
analysis/data/profiles/ssb/bloom/: Q1.1.txt  Q1.2.txt  Q1.3.txt  Q2.3.txt  Q3.4.txt  Q4.1.txt  Q4.2.txt
analysis/data/profiles/ssb/vanilla/: Q2.1.txt  Q2.2.txt  Q3.2.txt  Q4.1.txt  Q4.3.txt
analysis/data/ssb/: c220g5.csv  rpi.csv
analysis/data/ssb/c220g5/: duckdb.csv  sqlite3.csv
analysis/data/ssb/c220g5/profiles/bloom/: Q1.1.txt  Q2.1.txt  Q2.2.txt  Q3.1.txt  Q3.2.txt  Q3.3.txt  Q3.4.txt  Q4.2.txt  Q4.3.txt
analysis/data/ssb/c220g5/profiles/vanilla/: Q1.2.txt  Q2.1.txt  Q2.3.txt  Q3.1.txt  Q3.3.txt  Q3.4.txt  Q4.1.txt  Q4.2.txt  Q4.3.txt
analysis/data/ssb/profiles/bloom/: Q1.2.txt  Q1.3.txt  Q2.2.txt  Q2.3.txt  Q3.1.txt  Q4.1.txt  Q4.3.txt
analysis/data/ssb/profiles/vanilla/: Q1.1.txt  Q1.3.txt  Q2.2.txt  Q2.3.txt  Q3.1.txt  Q3.2.txt  Q3.4.txt  Q4.2.txt
analysis/data/tatp/: c220g5.csv  duckdb.csv  rpi.csv
analysis/data/tatp/c220g5/: sqlite3.csv
analysis/data/tatp/rpi/: duckdb.csv  sqlite3.csv
analysis/logs/c220g5/: out.txt  ssb_out.txt
analysis/logs/rpi/: sqlite-performance_blob_log.txt  sqlite-performance_ssb-partial_log.txt  sqlite-performance_ssb-rerun_log.txt  sqlite-performance_tatp_log.txt
benchmarks/: tatp_sqlite3.cpp
scripts/: all.sh
scripts/benchmarks/: blob.sh  ssb.sh  tatp.sh
src/: readfile.hpp  readstr.h  readstr.hpp  sqlite3.hpp
src/benchmarks/blob/: blob_duckdb.cpp  blob_sqlite3.cpp  helpers.hpp
src/benchmarks/ssb/: helpers.hpp  ssb_duckdb.cpp  ssb_sqlite3.cpp
src/benchmarks/ssb/dbgen/: CMakeLists.txt  bcd2.c  bcd2.h  bm_utils.c  dsstypes.h  print.c  rnd.c  shared.h  text.c
src/benchmarks/ssb/sql/: q1.1.sql  q1.3.sql  q2.2.sql  q3.2.sql  q3.3.sql  q4.2.sql  q4.3.sql
src/benchmarks/ssb/sql/init/: duckdb.sql  sqlite3.sql
src/benchmarks/tatp/: helpers.hpp  tatp_duckdb.cpp  tatp_sqlite3.cpp
src/benchmarks/tatp/sql/: stmt_0.sql  stmt_3.sql  stmt_6.sql  stmt_7.sql  stmt_8.sql  stmt_9.sql
src/benchmarks/tatp/sql/init/: duckdb.sql  sqlite3.sql
src/blob/: blob_duckdb.cpp  blob_sqlite3.cpp
src/ssb/: ssb_duckdb.cpp  ssb_sqlite3.cpp
src/ssb/dbgen/: CMakeLists.txt  README.md  build.c  config.h.in  driver.c  dss.h  life_noise.h  load_stub.c  permute.c  rnd.h  speed_seed.c
src/ssb/sql/: q1.2.sql  q2.1.sql  q2.3.sql  q3.1.sql  q3.4.sql  q4.1.sql
src/ssb/sql/init/: duckdb.sql
src/systems/sqlite/: sqlite3.hpp
src/tatp/: tatp_duckdb.cpp  tatp_sqlite3.cpp
src/tatp/sql/: stmt_1.sql  stmt_2.sql  stmt_4.sql  stmt_5.sql
src/tatp/sql/init/: duckdb.sql
systems/: CMakeLists.txt
systems/sqlite-3370200/: CMakeLists.txt
